# doc_reviewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  TASKS.md  pytest.ini
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202606070001_initial_schema.py  202606070002_add_document_parse_error.py  202606070003_add_predicted_comment_run_metadata.py  202606080001_add_benchmark_report.py  202606080002_external_skill_snapshots.py  202607090001_ic_agentic_review_runs.py  202607140001_add_fin_summary_document_link.py
apps/api/app/: __init__.py  main.py
apps/api/app/authz/: policies.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  analysis.py  audit_log.py  base.py  benchmark.py  document.py  etalon.py  feedback.py  provider_key.py  skill.py  skill_source.py  user.py
apps/api/app/routers/: admin_documents.py  admin_etalons.py  admin_users.py  analyses.py  auth.py  benchmarks.py  documents.py  etalons.py  ic_review.py  skills.py  (+1 more)
apps/api/tests/: conftest.py  test_admin_sections.py  test_admin_users.py  test_analyses_api.py  test_analysis_jobs.py  test_auth.py  test_authz_policies.py  test_benchmarks_api.py  test_contract_schemas.py  test_devils_retrieval.py  test_document_type_detector.py  test_documents_upload.py  test_etalons.py  test_health.py  test_ic_review_api.py  test_production_deployment.py  test_provider_settings.py  test_seeds.py  test_skill_sources.py  test_skills_api.py
(+197 files in other folders)
